# team-astra

pipeline/: hello.py  kaggle-pipeline.py  load.py  main-old.py  main.py  pipeline.py  pyproject.toml
pipeline/cleaned_data/: cleaned_employees.csv
server-code/: .env  .gitignore  dataset_schemas.json  pyproject.toml  requirements.txt  value_descriptions_min.json
server-code/app/: deps.py  docs.py  main.py  settings.py
server-code/app/core/: ask_astra_chat_executer.py  catalogue.py  columns_touched.py  embedding_engine.py  followups.py  gemini_client.py  knowledge.py  models.py  needed_data.py  plan_cache.py  rag_gate.py  rag_repository.py  read_only_db_executor.py  redact.py  schema_catalog.py  schema_doc.py  schema_index.py  schema_overview.py  schema_slicer.py  sql_guard.py  sql_policy.py  sql_validation.py
server-code/app/jobs/: drift_watch.py  ingest_schema.py
server-code/app/prompts/versioned/v1/: analyst.py  narrator.py  repair.py
server-code/app/routers/: chat.py  health.py
