[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "astra"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
"fastapi>=0.115",
"uvicorn[standard]>=0.30",
"pydantic>=2.8",
"SQLAlchemy>=2.0",
"psycopg2-binary>=2.9",
"requests>=2.32",
"pinecone-client>=3.0",
"python-dotenv>=1.0",
"orjson>=3.10",
"tenacity>=9.0",
"typing-extensions>=4.10",
"anyio>=4.0",
 "pydantic-settings = '*'",
]


[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"